think im almost there